libfprint/nbis/mindtct/morph.c
@@ -151,7 +151,7 @@ char get_south8_2(char *ptr, const int row, const int iw, const int ih,
 {
    if (row >= ih-1) /* catch case where image is undefined southwards   */
       return failcode; /* use plane geometry and return code.           */
-
+   else
       return *(ptr+iw);
 }
 
@@ -175,7 +175,7 @@ char get_north8_2(char *ptr, const int row, const int iw,
 {
    if (row < 1)     /* catch case where image is undefined northwards   */
       return failcode; /* use plane geometry and return code.           */
-
+   else
       return *(ptr-iw);
 }
 
@@ -199,7 +199,7 @@ char get_east8_2(char *ptr, const int col, const int iw,
 {
    if (col >= iw-1) /* catch case where image is undefined eastwards    */
       return failcode; /* use plane geometry and return code.           */
-
+   else
       return *(ptr+ 1);
 }
 
@@ -221,6 +221,6 @@ char get_west8_2(char *ptr, const int col, const int failcode)
 {
    if (col < 1)     /* catch case where image is undefined westwards     */
       return failcode; /* use plane geometry and return code.            */
-
+   else
       return *(ptr- 1);
 }
